# FunctionInliningPass

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  build.sh  run.sh
demo/: demo.html
ir/: large.ll  mixed.ll  new_example.ll  recursive.ll  small.ll
optimized/: large.optimized.ll  mixed.optimized.ll  new_example.optimized.ll  recursive.optimized.ll  small.optimized.ll
scripts/: build.sh  generate_ir.sh  run.sh
src/: CMakeLists.txt  InlinePass.cpp  InlinerPass.cpp
testcases/: test01_basic_leaf.c  test02_nested_leaf.c  test03_high_frequency.c  test04_above_threshold.c  test05_direct_recursion.c  test06_indirect_recursion.c  test07_external_library.c  test08_multiple_callers.c  test09_unreferenced_dead_code.c  test10_comprehensive_pipeline.c
tests/: large.c  mixed.c  new_example.c  recursive.c  small.c
